# skills-mcp

./: .dev.vars.example  .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SETUP.md  SKILLS_EXPANSION_ROADMAP.md  THREAT_MODEL.md  TRANSPARENCY.md  docker-compose.yml  glama.json  package.json  pyproject.toml  requirements.txt  wrangler.jsonc
.github/ISSUE_TEMPLATE/: skill-submission.yml
.github/rulesets/: main.json
.github/workflows/: tests.yml  validate-skills.yml
.tools/: fetch_skills.py  validate_skills.py
docs/: ARCHITECTURE.md  FEDERATION_DESIGN.md  MCP_PROMPT_VERIFICATION.md  REVIEWER_CHECKLIST.md  THRESHOLD_CALIBRATION.md  VERSIONING.md
master-skill/: README.md  SKILL.md
scripts/: setup.ps1  setup.sh  validate_skills.py
skill_mcp/: server.py
skill_mcp/db/: cache.py  embedder.py  qdrant_client.py  qdrant_manager.py
skill_mcp/eval/: __init__.py  calibrate.py
skill_mcp/models/: skill.py
skill_mcp/security/: __init__.py  prompt_injection.py
skill_mcp/seed/: seed_skills.py
skill_mcp/skills_data/api-integration/: SKILL.md
skill_mcp/skills_data/claude-api/: SKILL.md
skill_mcp/skills_data/cloudflare-workers/: SKILL.md
skill_mcp/tools/: find_skills.py  get_skill_asset.py  get_skill_body.py  get_skill_options.py  get_skill_reference.py  list_all_skills.py  run_skill_script.py
src/: requirements.txt  worker.py
tests/: test_cache.py  test_models.py  test_prompt_injection.py  test_tools_integration.py
tests/eval/: threshold_calibration.json
(+46 files in other folders)
